# bitcoinbot-lambda

./: .replit  README.md  aws_deployment.md  config.py  database.py  deploy_lambda.py  lambda_handler.py  pyproject.toml  setup_local.py  strategy.py  sync_repo.py  trading_bot.py  utils.py
.ebextensions/: 01_packages.config  01_python.config  02_python.config
cloudformation/: README.md  deploy.py  lambda-template.yaml  template.yaml
